--- a/feature/todo/src/main/res/values/strings.xml
+++ b/feature/todo/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="add_todo">Add ToDo</string>
     <string name="your_todos">Your TODOs</string>
     <string name="press_the_button_to_add_a_todo_item">Press the + button to add a TODO item</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="failed_to_add_todo">Failed to add TODO</string>
+    <string name="ok">OK</string>
+    <string name="todo_added_successfully">ToDo Added Successfully</string>
+    <string name="click_to_go_back">Click to go back</string>
 </resources>
