--- a/feature/todo/src/main/res/values/strings.xml
+++ b/feature/todo/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="ok">OK</string>
     <string name="todo_added_successfully">ToDo Added Successfully</string>
     <string name="click_to_go_back">Click to go back</string>
+    <string name="search_todos">Search TODOs</string>
 </resources>
